[package]
name = "transport"
version = "0.0.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "transport"
path = "src/lib.rs"

[dev-dependencies]
stb_image = { path = "../rust-stb-image" }

[dependencies]
cgmath = "*"
#float = { path = "../float" }
float = "*"
memarray = { path = "../memarray" }
rand = "^0.5"
